syntax = "proto3";

package pb;

option go_package = "github.com/che1nov/tea-shop/shared/pb";

service DeliveryService {
  rpc CreateDelivery(CreateDeliveryRequest) returns (Delivery) {}
  rpc GetDelivery(GetDeliveryRequest) returns (Delivery) {}
  rpc UpdateDeliveryStatus(UpdateDeliveryStatusRequest) returns (Delivery) {}
  rpc ListDeliveries(ListDeliveriesRequest) returns (ListDeliveriesResponse) {}
}

message Delivery {
  int64 id = 1;
  int64 order_id = 2;
  string address = 3;
  string status = 4;
  int64 created_at = 5;
  int64 updated_at = 6;
}

message CreateDeliveryRequest {
  int64 order_id = 1;
  string address = 2;
}

message GetDeliveryRequest {
  int64 delivery_id = 1;
}

message UpdateDeliveryStatusRequest {
  int64 delivery_id = 1;
  string status = 2;
}

message ListDeliveriesRequest {
  int32 limit = 1;
  int32 offset = 2;
  string status = 3; // Опциональный фильтр по статусу
}

message ListDeliveriesResponse {
  repeated Delivery deliveries = 1;
  int32 total = 2;
}
