syntax = "proto3";

package pb;

option go_package = "github.com/che1nov/tea-shop/shared/pb";

service PaymentsService {
  rpc ProcessPayment(ProcessPaymentRequest) returns (Payment) {}
  rpc GetPayment(GetPaymentRequest) returns (Payment) {}
  rpc GetPaymentByOrderID(GetPaymentByOrderIDRequest) returns (Payment) {}
}

message Payment {
  int64 id = 1;
  int64 order_id = 2;
  double amount = 3;
  string status = 4;
  int64 created_at = 5;
  int64 updated_at = 6;
}

message ProcessPaymentRequest {
  int64 order_id = 1;
  double amount = 2;
  string method = 3;
}

message GetPaymentRequest {
  int64 payment_id = 1;
}

message GetPaymentByOrderIDRequest {
  int64 order_id = 1;
}
